# rayon

./: Cargo.toml
rayon-core/: Cargo.toml
rayon-core/src/: job.rs  latch.rs  lib.rs  registry.rs
rayon-core/src/join/: mod.rs
rayon-core/src/scope/: mod.rs
rayon-core/src/spawn/: mod.rs
rayon-core/src/thread_pool/: mod.rs
src/: lib.rs  range.rs  split_producer.rs  str.rs
src/iter/: enumerate.rs  from_par_iter.rs  map.rs  mod.rs  par_bridge.rs  repeat.rs  skip.rs  splitter.rs
src/iter/collect/: consumer.rs  mod.rs
src/iter/plumbing/: mod.rs
