[package]
name = "rayon"
# Reminder to update html_rool_url in lib.rs when updating version
version = "1.5.3"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Josh Stone <cuviper@gmail.com>"]
description = "Simple work-stealing parallelism for Rust"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rayon-rs/rayon"
documentation = "https://docs.rs/rayon/"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
exclude = ["/ci/*", "/scripts/*", "/.github/*", "/bors.toml"]

[workspace]
members = ["rayon-demo", "rayon-core"]
exclude = ["ci"]

[dependencies]
rayon-core = { version = "1.9.2", path = "rayon-core" }

[dependencies.crossbeam-deque]
git = "https://github.com/ryoqun/crossbeam"
rev = "9d7bdb17eb359dca7875c87ac713dfef29aae8e9"

# This is a public dependency!
[dependencies.either]
version = "1.0"
default-features = false

[dev-dependencies]
docopt = "1"
lazy_static = "1"
rand = "0.8"
rand_xorshift = "0.3"

[dev-dependencies.serde]
version = "1.0.85"
features = ["derive"]

[build-dependencies]
autocfg = "1"
